@@ -1,5 +1,6 @@
 
 5.2b1 -> 5.3a1
+    - jbj: cubehash: optimize with -msse2.
     - jbj: rpmdigest: use md6sum, not NIST, for MD6 test vectors.
     - jbj: rpmdigest: re-assign digest algo numbers, handle 224/256/384/512/1024
 	parameters within the digest algo name.
